🎨 fix styling for navbar on mobile

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,8 +2,6 @@ header#navbar-header {
   width: 100%;
   position: fixed;
   padding: 0 10px;
-  /* background-color: rgba(0, 0, 0, 0); */
-  /* opacity: 80%; */
   z-index: 1;
   display: flex;
   align-items: center;
@@ -15,7 +13,6 @@ header#navbar-header {
 
 a {
   font-size: smaller;
-  /* color: rgb(0, 0, 0); */
 }
 
 .logo {
@@ -28,4 +25,21 @@ a {
 .nav__links li {
   display: inline-block;
   padding: 10px 10px;
+}
+
+@media only screen and (max-width: 510px) {
+  header#navbar-header {
+    padding-top: 1.5vh;
+    flex-direction: column;
+  }
+  ul.nav__links {
+    padding: 0;
+    align-items: center;
+  }
+  ul {
+    margin-top: 0;
+  }
+  .logo {
+    margin: 0;
+  }
 }
